--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ShammaModel"
 uuid = "80f90042-ac61-11e8-0ace-f1a8d5e03555"
 authors = ["David Little <david.frank.little@gmail.com>"]
-version = "0.2.6"
+version = "0.2.7"
 
 [deps]
 AxisArrays = "39de3d68-74b9-583c-8d2d-e117c070f3a9"
@@ -20,14 +20,14 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-AxisArrays = "0.3.0"
-Colors = "0.9.4"
-DSP = "0.5.1"
-DataFrames = "0.14.0"
-FFTW = "0.2.4"
+AxisArrays = ">=0.3.0,<1.0"
+Colors = ">=0.9.4,<1.0"
+DSP = ">=0.5.1,<1.0"
+DataFrames = ">=0.14.0,<1.0"
+FFTW = ">=0.2.4,<1.0"
 FileIO = "1.0.1"
-JLD2 = "0.1.2"
-MetaArrays = "0.1.3"
-ProgressMeter = "0.6.0"
-Requires = "0.5.2"
-Unitful = "0.11.0"
+JLD2 = ">=0.1.2,<1.0"
+MetaArrays = ">=0.1.3,<1.0"
+ProgressMeter = ">=0.6.0,<1.0"
+Requires = ">=0.5.2,<1.0"
+Unitful = ">=0.11.0,<1.0"
