--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 MetaArrays = "36b8f3f0-b776-11e8-061f-1f20094e1fc8"
+PlotAxes = "8b6f5f00-d239-11e8-3a24-33314b00f6b0"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SampledSignals = "bd7594eb-a658-542f-9e75-4c4d8908c167"
@@ -27,7 +28,7 @@ DataFrames = ">=0.14.0,<1.0"
 FFTW = ">=0.2.4,<1.0"
 FileIO = "1.0.1"
 JLD2 = ">=0.1.2,<1.0"
-MetaArrays = ">=0.1.3,<1.0"
+MetaArrays = ">=0.1.4,<1.0"
 ProgressMeter = ">=0.6.0,<1.0"
 Requires = ">=0.5.2,<1.0"
 Unitful = ">=0.11.0,<1.0"
