--- a/Project.toml
+++ b/Project.toml
@@ -21,14 +21,15 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-AxisArrays = ">=0.3.0,<1.0"
-Colors = ">=0.9.4,<1.0"
-DSP = ">=0.5.1,<1.0"
-DataFrames = ">=0.14.0,<1.0"
-FFTW = ">=0.2.4,<1.0"
-FileIO = "1.0.1"
-JLD2 = ">=0.1.2,<1.0"
-MetaArrays = ">=0.1.5,<1.0"
-ProgressMeter = ">=0.6.0,<1.0"
-Requires = ">=0.5.2,<1.0"
-Unitful = ">=0.11.0,<1.0"
+AxisArrays = "≥ 0.3.0"
+Colors = "≥ 0.9.4"
+DSP = "≥ 0.5.1"
+DataFrames = "≥ 0.14.0"
+FFTW = "≥ 0.2.4"
+FileIO = "≥ 1.0.1"
+JLD2 = "≥ 0.1.2"
+MetaArrays = "≥ 0.2"
+PlotAxes = "≥ 0.1.10"
+ProgressMeter = "≥ 0.6.0"
+Requires = "≥ 0.5.2"
+Unitful = "≥ 0.11.0"
