--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+ImageInTerminal = "d8c32880-2388-543b-8c61-d9f865259254"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 MetaArrays = "36b8f3f0-b776-11e8-061f-1f20094e1fc8"
 PlotAxes = "8b6f5f00-d239-11e8-3a24-33314b00f6b0"
