--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,6 +18,8 @@ notifications:
 install:
   - ps: iex ((new-object net.webclient).DownloadString("https://raw.githubusercontent.com/JuliaCI/Appveyor.jl/version-1/bin/install.ps1"))
 build_script:
+  - C:\julia\bin\julia -e "using Pkg; Pkg.Registry.add(\"https://github.com/haberdashPI/LabRegistry.jl\")"
+  - C:\julia\bin\julia -e "%JL_TEST_SCRIPT%"
   - echo "%JL_BUILD_SCRIPT%"
   - C:\julia\bin\julia -e "%JL_BUILD_SCRIPT%"
 test_script:
