--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ julia:
   - 1.1
   - 1.2
   - nightly
+script:
+- julia -e 'using Pkg; Pkg.Registry.add("https://github.com/haberdashPI/LabRegistry.jl")'
+- julia -e 'using Pkg; Pkg.build(); Pkg.test(coverage=true)'
 matrix:
   allow_failures:
     - julia: nightly
