--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,5 @@
 environment:
   matrix:
-  - julia_version: 1.0
   - julia_version: 1.1
   - julia_version: 1.2
   - julia_version: nightly
@@ -18,7 +17,7 @@ notifications:
 install:
   - ps: iex ((new-object net.webclient).DownloadString("https://raw.githubusercontent.com/JuliaCI/Appveyor.jl/version-1/bin/install.ps1"))
 build_script:
-  - C:\julia\bin\julia -e "using Pkg; Pkg.Registry.add(\"https://github.com/haberdashPI/LabRegistry.jl\")"
+  - C:\julia\bin\julia -e "using Pkg; Pkg.Registry.add(RegistrySpec(url = \"https://github.com/haberdashPI/LabRegistry.jl\"))"
   - C:\julia\bin\julia -e "%JL_TEST_SCRIPT%"
   - echo "%JL_BUILD_SCRIPT%"
   - C:\julia\bin\julia -e "%JL_BUILD_SCRIPT%"
