--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,6 +17,7 @@ notifications:
 install:
   - ps: iex ((new-object net.webclient).DownloadString("https://raw.githubusercontent.com/JuliaCI/Appveyor.jl/version-1/bin/install.ps1"))
 build_script:
+  - C:\julia\bin\julia -e 'using Pkg; Pkg.Registry.add("General")'
   - C:\julia\bin\julia -e "using Pkg; Pkg.Registry.add(RegistrySpec(url = \"https://github.com/haberdashPI/LabRegistry.jl\"))"
   - C:\julia\bin\julia -e "%JL_TEST_SCRIPT%"
   - echo "%JL_BUILD_SCRIPT%"
