--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ julia:
   - 1.2
   - nightly
 script:
+- julia -e 'using Pkg; Pkg.Registry.add("General")'
 - julia -e 'using Pkg; Pkg.Registry.add(RegistrySpec(url = "https://github.com/haberdashPI/LabRegistry.jl"))'
 - julia -e 'using Pkg; Pkg.build(); Pkg.test(coverage=true)'
 matrix:
