--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,6 +9,7 @@ platform:
 matrix:
   allow_failures:
   - julia_version: nightly
+  - julia_version: 1.2
 notifications:
   - provider: Email
     on_build_success: false
